--- a/Lesson1/index.html
+++ b/Lesson1/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>New</title>
 </head>
-    <h1>Some text text</h1>
+    <h1>Some text</h1>
 
 <body>
     <span id="sp1" class="BlaBla">
